#24 overflow issue

--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -1,11 +1,32 @@
-.navbar-default {
+.navigation {
 	@media (min-width: $screen-sm-min) {
 		height: 75px;
 	}
 	height: 135px;
-	border: none;
-	border-bottom: 30px solid black;
+	width: 100%;
+	overflow: hidden;
 	margin-bottom: 40px;
+	border-bottom: 30px solid black;
+	background: white;
+	position: relative;
+	ul {
+		list-style-type: none;
+		margin: 0;
+		padding: 0;
+		font-size: 70px;
+		line-height: 0.8;
+		font-weight: 100;
+	}
+}
+
+.navigation-left {
+	position:absolute;
+	left: -10px;
+}
+
+.navigation-right {
+	position:absolute;
+	right: -10px;
 }
 
 .logo-container {
@@ -24,7 +45,6 @@
 	top: 7.5px;
 	overflow: hidden;
 }
-
 
 .main-header {
 	position: relative;
