--- a/assets/styles/layouts/_issues.scss
+++ b/assets/styles/layouts/_issues.scss
@@ -24,3 +24,9 @@
 	color: hsla(0,0,0,1);
 	margin-top: 0;
 }
+
+.call-for-papers-arrow {
+	color: black;
+	float: right;
+	margin-top: 110px;
+}
