--- a/assets/styles/layouts/_nav-side.scss
+++ b/assets/styles/layouts/_nav-side.scss
@@ -2,6 +2,7 @@
 	position: absolute;
 	width: 100%;
 	height: 100%;
+	margin-top: -120px;
 }
 
 .nav-top {
